# YT2mp3

./: .gitignore  LICENSE  README.md  authorised_users.yml  authorised_users_example.yml  download_queue.py  downloader.py  pyproject.toml  queue.yml  requirements.txt  yt2mp3.py
YT2mp3/config/: default_config.yml  tg_token_example.py
YT2mp3bot/: __init__.py  download_queue.py  downloader.py
